--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
      <div class="container">
-       
+       <div class="info">
+         
+       </div>
      </div>
   </body>
 </html>
