--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
      <div class="container">
        <div class="info">
-         
+         <h1>WELCOME</h1>
        </div>
      </div>
   </body>
