--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <div class="container">
        <div class="info">
          <h1>WELCOME</h1>
+         <h2>TO DELANI STUDIO</h2>
        </div>
      </div>
   </body>
