add paragraph to the page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
        <div class="info">
          <h1>WELCOME</h1>
          <h2>TO DELANI STUDIO</h2>
+         <P>AMAZING PEOPLE MAKE AMAZING DESIGHNS IN A FUN ENVIROMENT</P>
        </div>
      </div>
   </body>
