add division class about

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
          <h2>TO DELANI STUDIO</h2>
          <P>AMAZING PEOPLE MAKE AMAZING DESIGHNS IN A FUN ENVIROMENT</P>
        </div>
+       <div class="about">
+         
+       </div>
      </div>
   </body>
 </html>
