--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <P>AMAZING PEOPLE MAKE AMAZING DESIGHNS IN A FUN ENVIROMENT</P>
        </div>
        <div class="about">
-         
+         <h1>ABOUT US</h1>
        </div>
      </div>
   </body>
