--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
        </div>
        <div class="about">
          <h1>ABOUT US</h1>
+         <p>When you work with us,you are part of a team of commited collaborators.All aspects of software development process are intergrated,interactive and agile.</p>
+         <p>Our approach unifies design,development and product managment to create exceptional products.</p>
+         <p>We start each project by understanding your business goals,the users needs and the product requirements.</p>
+         <p>We help translate them into active and elegant solutions.</p>
        </div>
      </div>
   </body>
