--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
          <p>We start each project by understanding your business goals,the users needs and the product requirements.</p>
          <p>We help translate them into active and elegant solutions.</p>
        </div>
+       <div class="serv">
+         
+       </div>
      </div>
   </body>
 </html>
