--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <p>We help translate them into active and elegant solutions.</p>
        </div>
        <div class="serv">
-         
+         <h1>SERVICES</h1>
        </div>
      </div>
   </body>
