add paragraphs to division class serv

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
        </div>
        <div class="serv">
          <h1>SERVICES</h1>
+         <p>Bfore we sign a contract or write a line of code,Our team will spend the neccessary time needed to understand your product vission.</p>
+         <p>The outcome of the scoping session aproposal or high-level statement of work.</p>
+         <p>Based on your requirements,we can provide a complete offering or just the piece you need.</p>
        </div>
      </div>
   </body>
