add division class do

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
          <p>The outcome of the scoping session aproposal or high-level statement of work.</p>
          <p>Based on your requirements,we can provide a complete offering or just the piece you need.</p>
        </div>
+       <div class="do">
+         
+       </div>
      </div>
   </body>
 </html>
