--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <p>Based on your requirements,we can provide a complete offering or just the piece you need.</p>
        </div>
        <div class="do">
-         
+         <h1>WHAT WE DO</h1>
        </div>
      </div>
   </body>
