add header block element to the division class do

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
        </div>
        <div class="do">
          <h1>WHAT WE DO</h1>
+         <h2>DESIGN</h2>
        </div>
      </div>
   </body>
