--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
          <p>Our design practice offers a full range of services including brand strategy,interaction and visual design and user experience testing.</p>
          <p>Throughout your project,our designers create and implement visual design and workflows,solict user feedback and work with you to make sure what gets built is what is needed.</p>
          <h2>DEVELOPMENT</h2>
+         <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
+         <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven development and pair programming.</p>
        </div>
      </div>
   </body>
