--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
          <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
          <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven development and pair programming.</p>
          <h2>PRODUCT MANAGMENT</h2>
+         <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
+         <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven and pair programming.</p>
        </div>
      </div>
   </body>
