--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
          <div class="portfolio">
             
          </div>
+         <div class="footer">
+           
+         </div>
        </div>
      </div>
   </body>
