--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
          <div class="portfolio">
             
          </div>
-         <div class="footer">
+         <div  class="contact">
            
+         </div>
+         <div class="footer">
+
          </div>
        </div>
      </div>
