--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
          </div>
          <div  class="contact">
-           
+           <h2>CONTACT US</h2>
          </div>
          <div class="footer">
 
