add paragraphs to division class footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
            <h2>CONTACT US</h2>
          </div>
          <div class="footer">
-
+          <p>DELANI STUDIO</p>
+          <P>2019</P>
          </div>
        </div>
      </div>
