--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Delani Studio.</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   </head>
   <body>
      <div class="container">
