add logo image to the page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
      <div class="container">
        <div class="info">
+         <img src="assets/logo/logo.png">
          <h1>WELCOME</h1>
          <h2>TO DELANI STUDIO</h2>
          <P>AMAZING PEOPLE MAKE AMAZING DESIGHNS IN A FUN ENVIROMENT</P>
