add mouse image to the page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <h1>WELCOME</h1>
          <h2>TO DELANI STUDIO</h2>
          <P>AMAZING PEOPLE MAKE AMAZING DESIGHNS IN A FUN ENVIROMENT</P>
+         <img src="assets/mouse_click.png">
        </div>
        <div class="about">
          <h1>ABOUT US</h1>
