add header block elements to division class portfolio

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
          <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven and pair programming.</p>
          <div class="portfolio">
-            
+            <h1>PORTFOLIO</h1>
          </div>
          <div  class="contact">
            <h2>CONTACT US</h2>
