add images to the division portfolio

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
          <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven and pair programming.</p>
          <div class="portfolio">
             <h1>PORTFOLIO</h1>
+            <img src="assets/portfolio/work4.jpg">
+            <img src="assets/portfolio/work3.jpg">
+            <img src="assets/portfolio/work2.jpg">
+            <img src="assets/portfolio/work1.jpg">
+            <img src="assets/portfolio/work5.jpg">
+            <img src="assets/portfolio/work6.jpg">
+            <img src="assets/portfolio/work7.jpg">
+            <img src="assets/portfolio/work8.jpg">
          </div>
          <div  class="contact">
            <h2>CONTACT US</h2>
