--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
            <h2>CONTACT US</h2>
          </div>
          <div class="footer">
+           <img src="assets/social_icons/twitter.png">
+           <img src="assets/social_icons/dribble.png">
+           <img src="assets/social_icons/facebook.png">
+           <img src="assets/social_icons/g_plus.png">
+           <img src="assets/social_icons/skype.png">
+           <img src="assets/social_icons/stumble_upon.png">
+           <img src="assets/social_icons/behance.png">
+           <img src="assets/social_icons/pinterest.png">
+           <img src="assets/social_icons/flickr.png">
           <p>DELANI STUDIO</p>
           <P>2019</P>
          </div>
