--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <div class="info">
          <img src="assets/logo/logo.png">
          <h1>WELCOME</h1>
-         <h2>TO DELANI STUDIO</h2>
+         <br><h2>TO DELANI STUDIO</h2>
          <P>AMAZING PEOPLE MAKE AMAZING DESIGHNS IN A FUN ENVIROMENT</P>
          <img src="assets/mouse_click.png">
        </div>
@@ -54,6 +54,19 @@
          </div>
          <div  class="contact">
            <h2>CONTACT US</h2>
+           <form id="form3" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
+            <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
+            <input type="hidden" name="id" value="dbf7e27685">
+            <div class="form-group form-inline">
+              <input type="text" class="form-control" placeholder="Name...." name="MERGE1" id="MERGE1" size="25" value="">
+              <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off" name="MERGE0"
+                id="MERGE0" size="25" value="">
+            </div>
+            <div class="form-group">
+              <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary col-md-1">Submit</button>
+          </form>
          </div>
          <div class="footer">
            <img src="assets/social_icons/twitter.png">
