--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <img src="assets/logo/logo.png">
          <h1>WELCOME</h1>
          <br><h2>TO DELANI STUDIO</h2>
-         <P>AMAZING PEOPLE MAKE AMAZING DESIGHNS IN A FUN ENVIROMENT</P>
+         <P>AMAZING PEOPLE MAKE AMAZING DESIGNS IN A FUN ENVIROMENT</P>
          <img src="assets/mouse_click.png">
        </div>
        <div class="about">
@@ -59,8 +59,7 @@
             <input type="hidden" name="id" value="dbf7e27685">
             <div class="form-group form-inline">
               <input type="text" class="form-control" placeholder="Name...." name="MERGE1" id="MERGE1" size="25" value="">
-              <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off" name="MERGE0"
-                id="MERGE0" size="25" value="">
+              <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off" name="MERGE0"id="MERGE0" size="25" value="">
             </div>
             <div class="form-group">
               <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
