--- a/index.html
+++ b/index.html
@@ -29,18 +29,26 @@
        </div>
        <div class="do">
          <h1>WHAT WE DO</h1>
+        <div class="row">
+        <div class="col-md-4">
          <img src="assets/services_icons/design_icon.png">
          <h2>DESIGN</h2>
          <p>Our design practice offers a full range of services including brand strategy,interaction and visual design and user experience testing.</p>
          <p>Throughout your project,our designers create and implement visual design and workflows,solict user feedback and work with you to make sure what gets built is what is needed.</p>
+         </div>
+          <div class="col-md-4">
          <img src="assets/services_icons/dev_icon.png">
          <h2>DEVELOPMENT</h2>
          <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
          <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven development and pair programming.</p>
+         </div>
+         <div class="col-md-4">
          <img src="assets/services_icons/product_icon.png">
          <h2>PRODUCT MANAGMENT</h2>
          <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
          <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven and pair programming.</p>
+         </div>
+        </div>
          <div class="portfolio">
             <h1>PORTFOLIO</h1>
             <img src="assets/portfolio/work4.jpg">
