--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
        <div class="do">
          <h1>WHAT WE DO</h1>
         <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-4">
          <img src="assets/services_icons/design_icon.png">
          <h2>DESIGN</h2>
          <p>Our design practice offers a full range of services including brand strategy,interaction and visual design and user experience testing.</p>
          <p>Throughout your project,our designers create and implement visual design and workflows,solict user feedback and work with you to make sure what gets built is what is needed.</p>
          </div>
-          <div class="col-md-4">
+          <div class="col-sm-4">
          <img src="assets/services_icons/dev_icon.png">
          <h2>DEVELOPMENT</h2>
          <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
          <p>They collaborate with your team to write,and improve code on a daily basis,using proven practices such as test-driven development and pair programming.</p>
          </div>
-         <div class="col-md-4">
+         <div class="col-sm-4">
          <img src="assets/services_icons/product_icon.png">
          <h2>PRODUCT MANAGMENT</h2>
          <p>All engineers are fluent in the latest enterprise,mobile and web development technologies.</p>
@@ -51,14 +51,40 @@
         </div>
          <div class="portfolio">
             <h1>PORTFOLIO</h1>
+            <div class="row" id="port">
+              <div class="col-md-3" id="work1">
             <img src="assets/portfolio/work4.jpg">
+            <p id="overlay"class="text">Black studio</p>
+            </div>
+            <div class="col-md-3" id="work2">
             <img src="assets/portfolio/work3.jpg">
+            <p id="overlay2" class="text">Ontario Security</p>
+            </div>
+            <div class="col-md-3" id="work3">
             <img src="assets/portfolio/work2.jpg">
+            <p id="overlay3" class="text">Pyramids</p>
+            </div>
+            <div class="col-md-3" id="work4">
             <img src="assets/portfolio/work1.jpg">
+            <p id="overlay4" class="text">Jim Carry</p>
+            </div>
+            <div class="col-md-3" id="work5">
             <img src="assets/portfolio/work5.jpg">
+            <p id="overlay5" class="text">Have A Nice Day</p>
+            </div>
+            <div class="col-md-3" id="work1">
             <img src="assets/portfolio/work6.jpg">
+            <p id="overlay6" class="text">Calculator</p>
+            </div>
+            <div class="col-md-3" id="work6">
             <img src="assets/portfolio/work7.jpg">
+            <p id="overlay7" class="text">Burned</p>
+            </div>
+            <div class="col-md-3" id="work7">
             <img src="assets/portfolio/work8.jpg">
+            <p id="overlay8" class="text">Giraffe Restaurant</p>
+            </div>
+            </div>
          </div>
          <div  class="contact">
            <h2>CONTACT US</h2>
