--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
             <input type="hidden" name="id" value="dbf7e27685">
             <div class="form-group form-inline">
-              <input type="text" class="form-control" placeholder="Name...." name="MERGE1" id="MERGE1" size="25" value="">
-              <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off" name="MERGE0"id="MERGE0" size="25" value="">
+              <input type="text" class="form-control" placeholder="Name...." name="co" id="co" size="25" value="">
+              <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off" name="co2"id="co2" size="25" value="">
             </div>
             <div class="form-group">
               <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
