--- a/index.html
+++ b/index.html
@@ -1,140 +1,151 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Delani Studio.</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-     <div class="container">
-       <div class="info">
-         <img src="assets/logo/logo.png">
-         <h1>WELCOME</h1>
-         <br><h2>TO DELANI STUDIO</h2>
-         <P>AMAZING PEOPLE MAKE AMAZING DESIGNS IN A FUN ENVIROMENT</P>
-         <img src="assets/mouse_click.png">
-       </div>
-       <div class="about">
-         <h1>ABOUT US</h1>
-         <p>When you work with us,you are part of a team of commited collaborators.All aspects of software development process are intergrated,interactive and agile.</p>
-         <p>Our approach unifies design,development and product managment to create exceptional products.</p>
-         <p>We start each project by understanding your business goals,the users needs and the product requirements.</p>
-         <p>We help translate them into active and elegant solutions.</p>
-       </div>
-       <div class="serv">
-         <h1>SERVICES</h1>
-         <p>Bfore we sign a contract or write a line of code,Our team will spend the neccessary time needed to understand your product vission.</p>
-         <p>The outcome of the scoping session aproposal or high-level statement of work.</p>
-         <p>Based on your requirements,we can provide a complete offering or just the piece you need.</p>
-       </div>
-      <div class="container what-we-do">
-        <h2 class="headings">WHAT WE DO</h2>
-        <div class="row">
-          <div class="col-md-4">
-            <div id="design">
-              <h2 class="title">DESIGN</h2>
-              <p>Our design practice offers a full range of services including brand strategy, interaction and visual design
-                and user experience testing.</p>
-              <p>Throughout your project, our designers create and implement visual design and workflows, solicit user
-                feedback and work with you to make sure what gets built is what is needed.</p>
-            </div>
-            <div id="design-image">
-              <img src="assets/services_icons/design_icon.png" alt="design">
-              <p>DESIGN</p>
-            </div>
+<head>
+  <title>Delani Studio.</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="info"><br>
+      <img src="assets/logo/logo.png"><br>
+      <h1>WELCOME</h1>
+      <br>
+      <h2>TO DELANI STUDIO</h2>
+      <P>AMAZING PEOPLE MAKE AMAZING DESIGNS IN A FUN ENVIROMENT</P>
+      <br><br><br><img src="assets/mouse_click.png">
+    </div>
+    <div class="about">
+      <h1>ABOUT US</h1>
+      <p>When you work with us,you are part of a team of commited collaborators.All aspects of software development
+        process are intergrated,interactive and agile.</p>
+      <p>Our approach unifies design,development and product managment to create exceptional products.</p>
+      <p>We start each project by understanding your business goals,the users needs and the product requirements.</p>
+      <p>We help translate them into active and elegant solutions.</p>
+    </div>
+    <div class="serv">
+      <h1>SERVICES</h1>
+      <p>Bfore we sign a contract or write a line of code,Our team will spend the neccessary time needed to understand
+        your product vission.</p>
+      <p>The outcome of the scoping session aproposal or high-level statement of work.</p>
+      <p>Based on your requirements,we can provide a complete offering or just the piece you need.</p>
+    </div>
+    <div class="container what-we-do">
+      <h2 class="headings">WHAT WE DO</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div id="design">
+            <h2 class="title">DESIGN</h2>
+            <p>Our design practice offers a full range of services including brand strategy, interaction and visual
+              design
+              and user experience testing.</p>
+            <p>Throughout your project, our designers create and implement visual design and workflows, solicit user
+              feedback and work with you to make sure what gets built is what is needed.</p>
           </div>
-          <div class="col-md-4">
-            <div id="development">
-              <h2 class="title">DEVELOPMENT</h2>
-              <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-              <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as
-                test-driven development and pair programming.</p>
-            </div>
-            <div id="development-image">
-              <img src="assets/services_icons/dev_icon.png" alt="development">
-              <P>DEVELOPMENT</P>
-            </div>
+          <div id="design-image">
+            <img src="assets/services_icons/design_icon.png" alt="design">
+            <p>DESIGN</p>
           </div>
-          <div class="col-md-4">
-            <div id="product">
-              <h2 class="title">PRODUCT MANAGEMENT</h2>
-              <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-              <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as
-                test-driven development and pair programming.</p>
-            </div>
-            <div id="product-image">
-              <img src="assets/services_icons/product_icon.png" alt="products">
-              <P>PRODUCT MANAGEMENT</P>
-            </div>
+        </div>
+        <div class="col-md-4">
+          <div id="development">
+            <h2 class="title">DEVELOPMENT</h2>
+            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+            <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          </div>
+          <div id="development-image">
+            <img src="assets/services_icons/dev_icon.png" alt="development">
+            <P>DEVELOPMENT</P>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="product">
+            <h2 class="title">PRODUCT MANAGEMENT</h2>
+            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+            <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such
+              as
+              test-driven development and pair programming.</p>
+          </div>
+          <div id="product-image">
+            <img src="assets/services_icons/product_icon.png" alt="products">
+            <P>PRODUCT MANAGEMENT</P>
           </div>
         </div>
       </div>
-         <div class="portfolio">
-            <h1>PORTFOLIO</h1>
-            <div class="row" id="port">
-              <div class="col-md-3" id="work1">
-            <img src="assets/portfolio/work4.jpg">
-            <p id="overlay"class="text">Black studio</p>
-            </div>
-            <div class="col-md-3" id="work2">
-            <img src="assets/portfolio/work3.jpg">
-            <p id="overlay2" class="text">Ontario Security</p>
-            </div>
-            <div class="col-md-3" id="work3">
-            <img src="assets/portfolio/work2.jpg">
-            <p id="overlay3" class="text">Pyramids</p>
-            </div>
-            <div class="col-md-3" id="work4">
-            <img src="assets/portfolio/work1.jpg">
-            <p id="overlay4" class="text">Jim Carry</p>
-            </div>
-            <div class="col-md-3" id="work5">
-            <img src="assets/portfolio/work5.jpg">
-            <p id="overlay5" class="text">Have A Nice Day</p>
-            </div>
-            <div class="col-md-3" id="work1">
-            <img src="assets/portfolio/work6.jpg">
-            <p id="overlay6" class="text">Calculator</p>
-            </div>
-            <div class="col-md-3" id="work6">
-            <img src="assets/portfolio/work7.jpg">
-            <p id="overlay7" class="text">Burned</p>
-            </div>
-            <div class="col-md-3" id="work7">
-            <img src="assets/portfolio/work8.jpg">
-            <p id="overlay8" class="text">Giraffe Restaurant</p>
-            </div>
-            </div>
-         </div>
-         <div  class="contact">
-           <h2>CONTACT US</h2>
-           <form id="form3" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
-            <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0">
-            <input type="hidden" name="id" value="dbf7e27685">
-            <div class="form-group form-inline">
-              <input type="text" class="form-control" placeholder="Name...." name="co" id="co" size="25" value="">
-              <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off" name="co2"id="co2" size="25" value="">
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary col-md-1">Submit</button>
-          </form>
-         </div>
-         <div class="footer">
-           <img src="assets/social_icons/twitter.png">
-           <img src="assets/social_icons/dribble.png">
-           <img src="assets/social_icons/facebook.png">
-           <img src="assets/social_icons/g_plus.png">
-           <img src="assets/social_icons/skype.png">
-           <img src="assets/social_icons/stumble_upon.png">
-           <img src="assets/social_icons/behance.png">
-           <img src="assets/social_icons/pinterest.png">
-           <img src="assets/social_icons/flickr.png">
-          <p>DELANI STUDIO</p>
-          <P>2019</P>
-         </div>
-       </div>
-     </div>
-  </body>
+    </div>
+    <div class="portfolio">
+      <h1>PORTFOLIO</h1>
+      <div class="row" id="port">
+        <div class="col-md-3" id="work1">
+          <img src="assets/portfolio/work4.jpg">
+          <p id="overlay" class="text">Black studio</p>
+        </div>
+        <div class="col-md-3" id="work2">
+          <img src="assets/portfolio/work3.jpg">
+          <p id="overlay2" class="text">Ontario Security</p>
+        </div>
+        <div class="col-md-3" id="work3">
+          <img src="assets/portfolio/work2.jpg">
+          <p id="overlay3" class="text">Pyramids</p>
+        </div>
+        <div class="col-md-3" id="work4">
+          <img src="assets/portfolio/work1.jpg">
+          <p id="overlay4" class="text">Jim Carry</p>
+        </div>
+        <div class="col-md-3" id="work5">
+          <img src="assets/portfolio/work5.jpg">
+          <p id="overlay5" class="text">Have A Nice Day</p>
+        </div>
+        <div class="col-md-3" id="work1">
+          <img src="assets/portfolio/work6.jpg">
+          <p id="overlay6" class="text">Calculator</p>
+        </div>
+        <div class="col-md-3" id="work6">
+          <img src="assets/portfolio/work7.jpg">
+          <p id="overlay7" class="text">Burned</p>
+        </div>
+        <div class="col-md-3" id="work7">
+          <img src="assets/portfolio/work8.jpg">
+          <p id="overlay8" class="text">Giraffe Restaurant</p>
+        </div>
+      </div>
+    </div>
+    <div class="contact">
+      <h2>CONTACT US</h2>
+      <form id="form3" action="https://gmail.us3.list-manage.com/subscribe/post" method="POST">
+        <input type="hidden" name="u" value="8f115bc2539e05026e4fff857eb5009e-us4">
+        <input type="hidden" name="id" value="">
+        <div class="form-group form-inline">
+          <div class="in">
+            <input type="text" class="form-control" placeholder="Name...." name="co" id="co" size="10" value="">
+            <input type="email" class="form-control" placeholder="Email...." autocapitalize="off" autocorrect="off"
+              name="co2" id="co2" size="10" value="">
+          </div>
+        </div>
+        <div class="form-group">
+          <textarea class="form-control" rows="8" id="comment" placeholder="Your message here...."></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary col-md-1">Submit</button>
+      </form>
+    </div>
+    <div class="footer">
+      <img src="assets/social_icons/twitter.png">
+      <img src="assets/social_icons/dribble.png">
+      <img src="assets/social_icons/facebook.png">
+      <img src="assets/social_icons/g_plus.png">
+      <img src="assets/social_icons/skype.png">
+      <img src="assets/social_icons/stumble_upon.png">
+      <img src="assets/social_icons/behance.png">
+      <img src="assets/social_icons/pinterest.png">
+      <img src="assets/social_icons/flickr.png">
+      <p>DELANI STUDIO</p>
+      <P>2019</P>
+    </div>
+  </div>
+  </div>
+</body>
+
 </html>
